tests/test_programs/errors/err_wrong_arg_count.cm
import std::io::println;
// エラーケース: 引数の数が不正（2つ以上の引数は無効）
int main() {
    println("a", "b");
    // printlnは最大1引数
    return 0;
}
